# minimal-zfs-backups

./: .pylintrc  AGENTS.md  CLAUDE.md  HARDENING.md  LICENSE  Makefile  README.md  desktop-to-server.yaml.example  initial-prompt  mzb.py  pyproject.toml  zbm.py  zfs-offsite-backup.sh
examples/: desktop-to-server.yaml
tests/: conftest.py  test_backup.py  test_compact.py  test_config.py  test_zfs.py
zbm/: backup.py  cli.py  compact.py  config.py  executor.py  models.py  zfs.py
