[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "minimalist-zfs-backups"
version = "0.1.0"
description = "Automate ZFS snapshot replication between pools, locally or over SSH"
requires-python = ">=3.10"
dependencies = [
    "pyyaml",
]

[project.scripts]
mzb = "mzb:main"

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.hatch.build.targets.wheel]
include = ["mzb.py"]

[tool.pytest.ini_options]
testpaths = ["tests"]
